[tool.poetry]
name = "findafoodtruck"
version = "0.1.0"
description = "CLI tool to find open food trucks in San Francisco"
authors = ["sjitb <satarjit.87@gmail.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.4"
configparser = "^6.0.0"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
black = "^24.1.1"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
